# How-to-Build-an-LLVM-Backend

./: README.md
ch1/: setup_env.sh
ch1/FileCheckExamples/: README.md
ch1/FileCheckExamples/ex1/: check-file.txt
ch1/FileCheckExamples/ex3/: README.md  check-file.txt  input.txt  run.sh
ch1/quiz/ex8-9/: README.md  check-file.txt  input.txt  run.sh
ch10/debug_capabilities/: CMakeLists.txt  README.md  before_slp_vectorizer_hadd_vector.ll  hadd_vector.ll
ch10/incorrect_optimization/: CMakeLists.txt  README.md  bugged_input.ll  bugpoint-check.sh  check.sh  main.cpp  populate_function.cpp
ch10/undefined_behavior/: CMakeLists.txt  README.md  main.cpp  populate_function.cpp
ch10/use_after_free/: CMakeLists.txt  README.md  main.cpp  populate_function.cpp
ch11/: full-dump.mir  input.ll  shrunk-dump.mir  simplified-dump.mir
ch11/instr_info/: CMakeLists.txt  MyTargetInstrInfo.cpp  MyTargetInstrInfo.h  MyTargetRegisterInfo.cpp  MyTargetRegisterInfo.h  README.md  instrinfo.td  main.cpp  mytarget.td  reginfo.td  solution-instrinfo.td  yourTurn-instrinfo.td
ch11/mir_format/: README.md
ch11/register_units/: CMakeLists.txt  README.md  SolutionRegisterInfo.cpp  SolutionRegisterInfo.h  YourTurnRegisterInfo.cpp  YourTurnRegisterInfo.h  main.cpp  solution-reginfo.td  yourTurn-reginfo.td
ch13/: CMakeLists.txt  README.md
ch3/: input.c  irreducible.c
ch3/llvm_ir/: CMakeLists.txt  README.md  input.c  main.cpp
ch3/llvm_ir/solution/: populate_function.cpp
ch3/llvm_ir/your_turn/: populate_function.cpp
ch3/machineir/: CMakeLists.txt  main.cpp
ch3/machineir/solution/: populate_function.cpp
ch3/machineir/your_turn/: populate_function.cpp
ch4/implicit_func_scope_change/: CMakeLists.txt  README.md  main.cpp
ch4/simple_cst_propagation/: CMakeLists.txt  README.md  input.c  main.cpp
ch4/simple_cst_propagation/solution/: populate_function.cpp
ch4/simple_cst_propagation/your_turn/: populate_function.cpp
ch5/your_first_pass/: CMakeLists.txt  main.cpp
ch5/your_first_pass/solution/: passWithLegacyPM.cpp  passWithNewPM.cpp  passWithNewPM.h
ch5/your_first_pass/your_turn/: passWithLegacyPM.cpp  passWithNewPM.cpp  passWithNewPM.h
ch5/your_first_pipeline/: CMakeLists.txt  main.cpp
ch5/your_first_pipeline/solution/: passPipelineWithLegacyPM.cpp  passPipelineWithNewPM.cpp
ch5/your_first_pipeline/your_turn/: passPipelineWithLegacyPM.cpp  passPipelineWithNewPM.cpp
ch6/: CMakeLists.txt  multiclass-with-def-type.td  multiclass.td  my-first-gisel.td  person.td
ch7/: CMakeLists.txt  README.md  access_struct_type.ll  anonymous_type.ll  array_type.ll  check_vec_int_ty.cpp  datalayout_alignment.ll  endianness.c  full_example.ll  hadd_vector.c  impact_of_abi.c  named_type.ll
ch8/: CMakeLists.txt  README.md  argpromotion.ll  canonical_form.ll  dce.ll  deadargelim.ll  indvars.ll  inline.ll  lcssa.ll  licm.ll  load-store-vectorizer.ll  loop-reduce.c  loop-reduce.ll  loop-unroll.ll  loop-vectorize.c  loop-vectorize.ll  reassociate.ll  simplifycfg.ll  slp-vectorizer.ll  value_tracking.ll  xor.ll
cmake/utils/: llc-run.cmake  opt-run.cmake  set-llvm-install-prefix.cmake
